header and row-tout alignment fixes

--- a/_prebuild/css/modules/header.scss
+++ b/_prebuild/css/modules/header.scss
@@ -94,7 +94,7 @@
 
     li {
       list-style-type: none;
-      margin-bottom: $base-unit * 6;
+      margin-bottom: $base-unit * 2;
       @include transition( color $transition );
 
       &:last-child {
@@ -102,8 +102,6 @@
       }
 
       @include mq(800px) {
-        margin-bottom: $base-unit * 2;
-
         &:last-child {
           margin-bottom: 0;
         }
@@ -113,7 +111,7 @@
     li,
     a {
       @include font-size(15); // same as previous heading
-      font-weight: 100;
+      font-weight: 300;
     }
   }
 
